--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "pyniplay"
 version = "0.1.0"
 description = "Python warper for Niplay, a console app to play music"
 authors = [
-    { name = "Max", email = "_@_.com" }
+    { name = "Max" }
 ]
 
 dependencies = []
